Updated basic analytics and retention dashboard

--- a/frontend/core/src/main/webapp/analytics/em_dashboard/index.html
+++ b/frontend/core/src/main/webapp/analytics/em_dashboard/index.html
@@ -46,34 +46,40 @@
 <body>
 <div class="container" role="main">
     <h1>extended mind dashboard</h1>
+    <h4><a href="retention.html">Change to: Retention</a></h4>
 
-    <h3>Daily sessions</h3>
-    <p>Does not include admin or beta users.</p>
-    <code>https://ext.md/evaluate/1.0/metric?expression=sum(session.eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5
+    <hr>
+    <h4 id="pageDate"></h4>
+
+    <h3>DAU</h3>
+    <p>Daily active users who have session. Does not include admin or beta users.</p>
+    <code id="dauCode">https://ext.md/evaluate/1.0/metric?expression=distinct(session(user.uuid).eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5
 </code>
     <div id="chart1"></div>
 
-    <h3>Daily unique users (sessions)</h3>
-    <p>Unique users who have session. Does not include admin or beta users.</p>
-    <code>https://ext.md/evaluate/1.0/metric?expression=distinct(session(user.uuid).eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
+    <h3>Daily sessions</h3>
+    <p>Total number of daily sessions. Does not include admin or beta users.</p>
+    <code id="sessionsCode">https://ext.md/evaluate/1.0/metric?expression=sum(session.eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
     <div id="chart2"></div>
 
-    <h3>Unique users creating tasks</h3>
+    <h3>DAU: creating tasks</h3>
     <p>Does not include admin or beta users.</p>
-    <code>https://ext.md/evaluate/1.0/metric?expression=distinct(addTask(user.uuid).eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
+    <code id="dauTasksCode">https://ext.md/evaluate/1.0/metric?expression=distinct(addTask(user.uuid).eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
+    <div id="chart3"></div>
+
+    <h3>DAU: creating notes</h3>
+    <p>Does not include admin or beta users.</p>
+    <code id="dauNotesCode">https://ext.md/evaluate/1.0/metric?expression=distinct(addNote(user.uuid).eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
     <div id="chart4"></div>
 
-    <h3>Unique users creating notes</h3>
+    <h3>DAU: visiting omnibar</h3>
     <p>Does not include admin or beta users.</p>
-    <code>https://ext.md/evaluate/1.0/metric?expression=distinct(addNote(user.uuid).eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
+    <code id="dauOmniCode">https://ext.md/evaluate/1.0/metric?expression=distinct(visit_omnibar(user.uuid).eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
     <div id="chart5"></div>
 
-    <h3>Unique users visiting omnibar</h3>
-    <p>Does not include admin or beta users.</p>
-    <code>https://ext.md/evaluate/1.0/metric?expression=distinct(visit_omnibar(user.uuid).eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
-    <div id="chart6"></div>
+    <hr>
 
-    <h3>First item added</h3>
+    <!-- <h3>First item added</h3>
     <p>Is this buggy? Numbers don't make sense with the rest of the data. Does not include admin or beta users.</p>
     <code>https://ext.md/evaluate/1.0/metric?expression=sum(firstItemAdded.eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
     <div id="chart7"></div>
@@ -93,7 +99,7 @@
     <h3>SignUp</h3>
     <p>Does not include admin or beta users.</p>
     <code>https://ext.md/evaluate/1.0/metric?expression=sum(visit_signup.eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5</code>
-    <div id="chart10"></div>
+    <div id="chart10"></div> -->
 
 </div>
 
@@ -101,72 +107,43 @@
 <script src="js/autodate.js"></script>
 <script src="js/d3/d3.js"></script>
 <script src="js/barchart.js"></script>
+<script src="js/combineSources.js"></script>
 <script>
-    var dataUrl = "https://ext.md/evaluate/1.0/metric?expression=sum(session.eq(user.type,2))&start=2014-05-1&stop=2014-07-23&step=864e5";
 
-    combinedItems = [];
-    combinations = 2;
+    // these defined in autodate.js 
+    var startDay = dateToString(startDate);
+    var endDay = dateToString(today);
 
-    // combine data
-    $.getJSON( "data/acceptInvite.json", function( data ) {
-        var items = [];
-        $.each( data, function( key, val ) {
-            combineJsonData(key,val);
-        });
-        combinationComplete();
-    });
+    // show date range in title
+    $('#pageDate').text(startDay + " to " + endDay);
 
-    $.getJSON( "data/signup.json", function( data ) {
-        var items = [];
-        $.each( data, function( key, val ) {
-            combineJsonData(key,val);
-        });
-        combinationComplete();
-    });
+    // queries for each chart
+    var baseUrl = "https://ext.md/evaluate/1.0/metric?expression=";
+    var dauQuery =  baseUrl + "distinct(session(user.uuid).eq(user.type,2))&step=864e5&start=" + startDay + "&stop=" + endDay;
+    var sessionsQuery = baseUrl + "sum(session.eq(user.type,2))&step=864e5&start=" + startDay + "&stop=" + endDay;
+    var dauTasksQuery = baseUrl + "distinct(addTask(user.uuid).eq(user.type,2))&step=864e5&start=" + startDay + "&stop=" + endDay;
+    var dauNotesQuery = baseUrl + "distinct(addNote(user.uuid).eq(user.type,2))&step=864e5&start=" + startDay + "&stop=" + endDay;
+    var dauOmnibarQuery = baseUrl + "distinct(visit_omnibar(user.uuid).eq(user.type,2))&step=864e5&start=" + startDay + "&stop=" + endDay;
 
-    function combinationComplete() {
-        combinations -= 1;
-        if (combinations == 0) {
-            console.log("successfully combined");
-            console.log(combinedItems);
-            return true;
-        } else {
-            return false;
-        }
-    }
+    // print queries to code blocks and make visible
+    $('#dauCode').text(dauQuery);
+    $('#sessionsCode').text(sessionsQuery);
+    $('#dauTasksCode').text(dauTasksQuery);
+    $('#dauNotesCode').text(dauNotesQuery);
+    $('#dauOmniCode').text(dauOmnibarQuery);
 
-    function isCombined() {
-        if (combinations == 1) {
-            return true;
-        } else {
-            return false;
-        }
-    }
-
-    // merges data from two json files into one json string
-    function combineJsonData (i, data) {
-        if (isCombined) {
-            // exists
-            combinedItems[i].value += data.value;
-        } else {
-            // first run
-            combinedItems[i] = data;
-        }
-    }
-
-    function combinationComplete () {
-        console.log(combinedItems);
-    }
-
-    initChartToElement("#chart1","data/sessions.json");
-    initChartToElement("#chart2","data/unique_users_sessions.json");
-    initChartToElement("#chart3","data/visit_signup.json");
-    initChartToElement("#chart4","data/unique_users_addtask.json");
-    initChartToElement("#chart5","data/unique_users_addnote.json");
-    initChartToElement("#chart6","data/unique_users_omnibar.json");
+    initChartToElement("#chart1",dauQuery);         //"data/unique_users_sessions.json"
+    initChartToElement("#chart2",sessionsQuery);    //"data/sessions.json"
+    initChartToElement("#chart3",dauTasksQuery);    //"data/unique_users_addtask.json"
+    initChartToElement("#chart4",dauNotesQuery);    //"data/unique_users_addnote.json"
+    initChartToElement("#chart5",dauOmnibarQuery);  // "data/unique_users_omnibar.json"
+    /* 
+    Not in use
     initChartToElement("#chart7","data/firstitemadded.json");
     initChartToElement("#chart8","data/visit_signup.json");
     initChartToElement("#chart9","data/acceptInvite.json");
     initChartToElement("#chart10","data/signup.json");
+    */
+
 </script>
 </body>
