Retention dashboard has platform and version filters, basic analytics visual update

--- a/frontend/core/src/main/webapp/analytics/em_dashboard/index.html
+++ b/frontend/core/src/main/webapp/analytics/em_dashboard/index.html
@@ -41,6 +41,14 @@
       display: none;
     }
 
+    .grid .tick {
+        stroke: #ddd;
+        opacity: 0.5;
+    }
+    .grid path {
+      stroke-width: 0;
+    }
+
     </style>
 </head>
 <body>
