--- a/frontend/core/src/main/webapp/analytics/em_dashboard/retention.html
+++ b/frontend/core/src/main/webapp/analytics/em_dashboard/retention.html
@@ -54,6 +54,8 @@
         <tr>
           <th>Date</th>
           <th>Signups</th>
+          <th>Platforms</th>
+          <th>Versions</th>
           <th>D1</th>
           <th>D7</th>
           <th>D30</th>
