--- a/frontend/core/src/main/webapp/analytics/index.html
+++ b/frontend/core/src/main/webapp/analytics/index.html
@@ -49,6 +49,35 @@
       stroke-width: 0;
     }
 
+    .d3-tip {
+      line-height: 1;
+      font-weight: bold;
+      padding: 12px;
+      background: rgba(0, 0, 0, 0.8);
+      color: #fff;
+      border-radius: 2px;
+    }
+
+    /* Creates a small triangle extender for the tooltip */
+    .d3-tip:after {
+      box-sizing: border-box;
+      display: inline;
+      font-size: 10px;
+      width: 100%;
+      line-height: 1;
+      color: rgba(0, 0, 0, 0.8);
+      content: "\25BC";
+      position: absolute;
+      text-align: center;
+    }
+
+    /* Style northward tooltips differently */
+    .d3-tip.n:after {
+      margin: -1px 0 0 0;
+      top: 100%;
+      left: 0;
+    }
+
     </style>
 </head>
 <body>
@@ -114,6 +143,7 @@
 <script src="js/jquery-2.1.1.js"></script>
 <script src="js/autodate.js"></script>
 <script src="js/d3/d3.js"></script>
+<script src="js/tip.js"></script>
 <script src="js/barchart.js"></script>
 <script src="js/combineSources.js"></script>
 <script>
