Added ConvertService to project.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -118,6 +118,7 @@
   <script src="static/app/main/omnibarEditItemScrollerDirective.js"></script>
   <script src="static/app/main/FooterController.js"></script>
   <script src="static/app/main/PageNotFoundController.js"></script>
+  <script src="static/app/main/ConvertService.js"></script>
   <script src="static/app/main/SynchronizeService.js"></script>
   <script src="static/app/main/itemsFilter.js"></script>
 
@@ -143,6 +144,7 @@
   <script src="test/mock/MockNotesBackendService.js"></script>
   <script src="test/mock/MockTagsBackendService.js"></script>
   <script src="test/mock/MockTasksBackendService.js"></script>
+  <script src="test/mock/MockConvertBackendService.js"></script>
   <script>
     function MockController(MockBackendService, SwiperService) {
       MockBackendService.mockBackend();
