Added ExtendedItemService to project. Moved transient property handling from TasksService to ExtendedItemService.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -106,6 +106,7 @@
   <script src="static/app/main/InboxController.js"></script>
   <script src="static/app/main/ItemsController.js"></script>
   <script src="static/app/main/ItemsService.js"></script>
+  <script src="static/app/main/ExtendedItemService.js"></script>
   <script src="static/app/main/MainController.js"></script>
   <script src="static/app/main/MenuController.js"></script>
   <script src="static/app/main/OmnibarController.js"></script>
