Moved menu and related logic to 'main' package.

--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -1,5 +1,5 @@
 <div id="main" ng-controller="MainController">
-  <div id="menu" ng-include="'static/app/auth/menu.html'"></div>
+  <div id="menu" ng-include="'static/app/main/menu.html'"></div>
   <div id="omnibar-drawer" class="omnibar-drawer" omnibar></div>
 
   <div id="feature-container-wrapper">
