--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -27,11 +27,11 @@
   <div ng-switch-when="task">
     <div class="swiper-no-swiping item-actions" data-snap-ignore="true" ng-init="openSnooze = {isOpen: false}">
       <div ng-if="openSnooze.isOpen === false" class="form-group item-actions">
-        <div ng-if="task.date">
+        <div ng-if="task.transientProperties.date">
           <label for="taskDue" class="sr-only">select date...</label>
-          <input type="date" id="taskDue" class="simple-input" ng-model="task.date" ng-click="openSnooze.isOpen=true">
+          <input type="date" id="taskDue" class="simple-input" ng-model="task.transientProperties.date" ng-click="openSnooze.isOpen=true">
         </div>
-        <div ng-if="!task.date" class="item-actions">
+        <div ng-if="!task.transientProperties.date" class="item-actions">
           <a href class="simple-input default-element date-input-placeholder" ng-click="openSnooze.isOpen = true">select date...</a>
         </div>
       </div>
