--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -115,7 +115,7 @@
               <div class="form-group">
                 <div ng-if="showDateInput">
                   <label for="taskDue" class="sr-only">select date...</label>
-                  <input type="date" id="taskDue" class="simple-input" date-input-blur="hideDate" ng-model="task.date" date-input="task" date-input-set-focus="focusDateInput">
+                  <input type="date" id="taskDue" class="simple-input" date-input-blur="hideDate" ng-model="task.transientProperties.date" date-input="task" date-input-set-focus="focusDateInput">
                 </div>
                 <div ng-if="!showDateInput" class="item-actions">
                   <span class="simple-input default-element date-input-placeholder" ng-click="focusDate()">select date...</span>
@@ -130,7 +130,7 @@
           </div>
 
           <div class="omnibar-scroller-slide" editable-field-container>
-            <div ng-if="task.date" class="form-group">
+            <div ng-if="task.transientProperties.date" class="form-group">
               <label for="taskRepeat" class="sr-only">repeating</label>
               <select id="taskRepeat" class="simple-input" ng-model="task.repeating" ng-options="repeatType as repeatType for repeatType in repeatTypes" editable-field>
                 <option value="">select repeating...</option>
