Implemented note's keywords with transientProperties.keywords:  * replaced note's keywords filters from controller functions to keywordsFilter service

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -95,6 +95,7 @@
 
   <script src="static/app/notes/NotesController.js"></script>
   <script src="static/app/notes/NotesService.js"></script>
+  <script src="static/app/notes/keywordsFilter.js"></script>
 
   <script src="static/app/admin/AdminController.js"></script>
   <script src="static/app/admin/AdminService.js"></script>
