--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -11,10 +11,10 @@
           extension to your biological mind</p>
       </div>
       <div class="group-btn row">
-        <button class="btn" ng-click="launchSignup()">
+        <button class="btn-action" ng-click="launchSignup()">
           <span>sign up</span>
         </button>
-        <button class="btn" ng-click="launchLogin()">
+        <button class="btn-action" ng-click="launchLogin()">
           <span>log in</span>
         </button>
       </div>
