--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -28,6 +28,7 @@
   <script src="static/lib/angularjs/angular-animate.js"></script>
   <script src="static/lib/angularjs/angular-mocks.js"></script>
   <script src="static/lib/angularjs/angular-route.js"></script>
+  <script src="static/lib/angularjs/angular-messages.js"></script>
   <script src="static/lib/angularjs/ngInfiniteScroll.js"></script>
 
   <script src="static/lib/base64.js"></script>
@@ -41,6 +42,7 @@
   <script src="static/common/editableFieldBackdropDirective.js"></script>
   <script src="static/common/editableFieldContainerDirective.js"></script>
   <script src="static/common/editableFieldDirective.js"></script>
+  <script src="static/common/iconCheckboxDirective.js"></script>
   <script src="static/common/includeReplaceDirective.js"></script>
   <script src="static/common/pikadayDirective.js"></script>
   <script src="static/common/iscroll-probe.js"></script>
@@ -120,6 +122,7 @@
   <script src="static/app/main/SynchronizeService.js"></script>
   <script src="static/app/main/itemsFilter.js"></script>
 
+  <script src="static/app/entry/EntryController.js"></script>
   <script src="static/app/entry/ForgotController.js"></script>
   <script src="static/app/entry/LaunchController.js"></script>
   <script src="static/app/entry/WaitingController.js"></script>
