--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -1,23 +1,86 @@
-<section id="entry" class="container-page">
+<section id="entry" class="container-page" ng-controller="EntryController">
   <header class="container-banner row">
     <span class="icon-logo-with-text"></span>
   </header>
-  <div class="container-content" ng-switch on="entryState">
-    <div ng-switch-default>
-      <div class="group-instruction row">
-        <p>extended mind helps you<br/>
-          manage your <b>tasks</b> and<br/>
-          <b>thoughts</b> as easily as if it was an<br/>
-          extension to your biological mind</p>
+  <div class="swiper-container" swiper-container="entry" swiper-type="main" expected-slides="(!entryState && 2) || (entryState === 'login' && 3)">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide swiper-no-swiping" swiper-slide="entry/home" slide-index=0>
+        <div class="container-content">
+          <div class="group-instruction row">
+            <p>extended mind helps you<br/>
+              manage your <b>tasks</b> and<br/>
+              <b>thoughts</b> as easily as if it was an<br/>
+              extension to your biological mind</p>
+          </div>
+          <div class="group-btn row">
+            <button class="btn-action" ng-click="launchSignup()">
+              <span class="text-btn">sign up</span>
+            </button>
+            <button class="btn-action" ng-click="launchLogin()">
+              <span class="text-btn">log in</span>
+            </button>
+          </div>
+        </div>
       </div>
-      <div class="group-btn row">
-        <button class="btn-action" ng-click="launchSignup()">
-          <span>sign up</span>
-        </button>
-        <button class="btn-action" ng-click="launchLogin()">
-          <span>log in</span>
-        </button>
+      <div class="swiper-slide" swiper-slide="entry/main" slide-index=1>
+        <div ng-if="entryState === 'signup'">
+          <form role="form" name="signupForm">
+            <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
+            <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password..." required />
+            <div class="group-mixed row">
+              <input type="checkbox" ng-model="user.agree" ng-true-value="true" icon-checkbox="signupFormAgree" />
+              <span class="text-checkbox text-details">I have read and agree to the <a href ng-click="gotoTermsOfService()">terms of service</a> and <a href ng-click="gotoPrivacyPolicy()">privacy policy</a></span>
+            </div>
+            <div class="group-btn row">
+              <button type="submit" class="btn-action" ng-disabled="!signupForm.$valid || !user.agree" ng-click="signUp()">
+                <span class="text-btn">sign up</span>
+              </button>
+            </div>
+          </form>
+          <div class="group-error row">
+            <div ng-if="signupForm.email.$touched" ng-messages="signupForm.email.$error">
+              <span class="text-error" ng-message="email">invalid email address</span>
+            </div>
+            <div ng-if="signupForm.password.$touched" ng-messages="signupForm.password.$error">
+              <span class="text-error" ng-message="minlength">password must be 7 characters or more</span>
+            </div>
+          </div>
+        </div>
+        <div ng-if="entryState === 'login'">
+          <form role="form" name="loginForm">
+            <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
+            <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password..." required />
+            <div class="group-mixed row">
+              <input type="checkbox" ng-model="user.remember" ng-true-value="true" icon-checkbox="loginFormRemember" />
+              <span class="text-checkbox">remember</span>
+            </div>
+            <div class="group-btn row">
+              <button type="submit" class="btn-action" ng-disabled="!loginForm.$valid" ng-click="logIn()">
+                <span class="text-btn">log in</span>
+              </button>
+            </div>
+          </form>
+          <div class="group-error row">
+            <div ng-if="loginForm.email.$touched" ng-messages="loginForm.email.$error">
+              <span class="text-error" ng-message="email">invalid email address</span>
+            </div>
+            <div ng-if="loginForm.password.$touched" ng-messages="loginForm.password.$error">
+              <span class="text-error" ng-message="minlength">password must be 7 characters or more</span>
+            </div>
+            <span ng-if="loginFailed" class="text-error">invalid username or password</span>
+            <span ng-if="loginOffline" class="text-error">can't connect to server. are you online?</span>
+          </div>
+        </div>
+      </div>
+      <div ng-if="entryState === 'login' || entryState === 'forgot'" class="swiper-slide" swiper-slide="entry/details" slide-index=2>
+        <div ng-if="entryState === 'forgot'">
+          <!-- TODO: Reset password -->
+        </div>
+        <div ng-if="entryState === 'reset'">
+          <!-- TODO: Reset password -->
+        </div>
       </div>
     </div>
   </div>
+
 </section>
