--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -13,17 +13,17 @@
               extension to your biological mind</p>
           </div>
           <div class="group-btn row">
-            <button class="btn-action" ng-click="launchSignup()">
+            <button class="btn-action" ng-click="swipeToSignup()">
               <span class="text-btn">sign up</span>
             </button>
-            <button class="btn-action" ng-click="launchLogin()">
+            <button class="btn-action" ng-click="swipeToLogin()">
               <span class="text-btn">log in</span>
             </button>
           </div>
         </div>
       </div>
       <div class="swiper-slide" swiper-slide="entry/main" slide-index=1>
-        <div ng-if="entryState === 'signup'">
+        <div ng-if="entryState === 'signup'" class="container-content">
           <form role="form" name="signupForm">
             <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
             <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password..." required />
@@ -45,8 +45,11 @@
               <span class="text-error" ng-message="minlength">password must be 7 characters or more</span>
             </div>
           </div>
+          <footer class="container-navigation-slide">
+            <a href class="link-navigation-back" ng-click="swipeToHome()">back</a>
+          </footer>
         </div>
-        <div ng-if="entryState === 'login'">
+        <div ng-if="entryState === 'login'" class="container-content">
           <form role="form" name="loginForm">
             <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
             <input class="row" type="password" name="password" id="password" ng-model="user.password" ng-minlength="7" placeholder="enter password..." required />
@@ -70,14 +73,35 @@
             <span ng-if="loginFailed" class="text-error">invalid username or password</span>
             <span ng-if="loginOffline" class="text-error">can't connect to server. are you online?</span>
           </div>
+          <footer class="container-navigation-slide">
+            <a href class="link-navigation-back" ng-click="swipeToHome()">back</a>
+            <a href class="link-navigation-forward" ng-click="swipeToForgot()">forgot?</a>
+          </footer>
         </div>
       </div>
-      <div ng-if="entryState === 'login' || entryState === 'forgot'" class="swiper-slide" swiper-slide="entry/details" slide-index=2>
-        <div ng-if="entryState === 'forgot'">
-          <!-- TODO: Reset password -->
-        </div>
-        <div ng-if="entryState === 'reset'">
-          <!-- TODO: Reset password -->
+      <div ng-if="entryState === 'login'" class="swiper-slide" swiper-slide="entry/details" slide-index=2>
+        <div class="container-content">
+          <div class="group-instruction row">
+            <p>reset password?</p>
+          </div>
+          <form role="form" name="forgotForm">
+            <input class="row" type="email" name="email" ng-model="user.username" placeholder="enter email..." required />
+            <div class="group-btn row">
+              <button type="submit" class="btn-action" ng-disabled="!forgotForm.$valid" ng-click="sendInstructions()">
+                <span class="text-btn">send</span>
+              </button>
+            </div>
+          </form>
+          <div class="group-error row">
+            <div ng-if="forgotForm.email.$touched" ng-messages="forgotForm.email.$error">
+              <span class="text-error" ng-message="email">invalid email address</span>
+            </div>
+            <span ng-if="sendFailed" class="text-error">you are not an extended mind user</span>
+            <span ng-if="sendOffline" class="text-error">can't connect to server. are you online?</span>
+          </div>
+          <footer class="container-navigation-slide">
+            <a href class="link-navigation-back" ng-click="swipeToMain()">back</a>
+          </footer>
         </div>
       </div>
     </div>
