Fixed list item javascript errors. More work on html and layout.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -78,6 +78,7 @@
   <script src="static/app/base/accordionTitleDirective.js"></script>
   <script src="static/app/base/accordionTitleLinkDirective.js"></script>
   <script src="static/app/base/itemCoreFieldsDirective.js"></script>
+  <script src="static/app/base/listItemDirective.js"></script>
   <script src="static/app/base/registerElementToFeatureDirective.js"></script>
   <script src="static/app/base/scrollToDirective.js"></script>
   <script src="static/app/base/swiperContainerDirective.js"></script>
