--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -10,7 +10,8 @@
             <p>extended mind helps you<br/>
               manage your <b>tasks</b> and<br/>
               <b>thoughts</b> as easily as if it was an<br/>
-              extension to your biological mind</p>
+              extension to your biological mind
+            </p>
           </div>
           <div class="group-btn row">
             <button class="btn-action" ng-click="swipeToSignup()">
