Renamed container-main to container-master to avoid confusion with 'main' module

--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -1,4 +1,4 @@
-<section id="entry" class="container-main" ng-controller="EntryController">
+<section id="entry" class="container-master" ng-controller="EntryController">
   <header class="container-banner row">
     <span class="icon-logo-with-text"></span>
   </header>
