--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -81,6 +81,8 @@
   <script src="static/app/base/listItemDirective.js"></script>
   <script src="static/app/base/registerElementToFeatureDirective.js"></script>
   <script src="static/app/base/scrollToDirective.js"></script>
+  <script src="static/app/base/snapDirective.js"></script>
+  <script src="static/app/base/snapDragDirective.js"></script>
   <script src="static/app/base/swiperContainerDirective.js"></script>
   <script src="static/app/base/swiperPreventDirective.js"></script>
   <script src="static/app/base/swiperSlideDirective.js"></script>
