--- a/frontend/core/src/main/webapp/static/app/main/focusSlides.html
+++ b/frontend/core/src/main/webapp/static/app/main/focusSlides.html
@@ -1,6 +1,6 @@
 <div ng-show="isFeatureActive('focus')" class="swiper-container main-slides" swiper-container="focus" swiper-type="main" expected-slides=2>
-  <div class="swiper-wrapper" ng-class="getIsWebkitScrolling() ? 'webkit-scrolling' : 'no-webkit-scrolling'" register-element-to-feature="focus" register-element-to-feature-swiper="focus">
-    <div class="swiper-slide" swiper-slide="focus/tasks" slide-index=0 ng-include="'static/app/main/focusTasks.html'" register-element-to-feature="focus" register-element-to-feature-snap="left"></div>
+  <div class="swiper-wrapper" ng-class="getIsWebkitScrolling() ? 'webkit-scrolling' : 'no-webkit-scrolling'">
+    <div class="swiper-slide" swiper-slide="focus/tasks" slide-index=0 ng-include="'static/app/main/focusTasks.html'" snap-drag="left"></div>
     <div class="swiper-slide" swiper-slide="focus/notes" slide-index=1 ng-include="'static/app/main/focusNotes.html'"></div>
   </div>
 </div>
