--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -63,11 +63,11 @@
   <script src="static/app/base/AuthenticationService.js"></script>
   <script src="static/app/base/BackendClientService.js"></script>
   <script src="static/app/base/ContextsController.js"></script>
+  <script src="static/app/base/DrawerService.js"></script>
   <script src="static/app/base/KeywordsController.js"></script>
   <script src="static/app/base/ListsController.js"></script>
   <script src="static/app/base/ListsService.js"></script>
   <script src="static/app/base/ModalService.js"></script>
-  <script src="static/app/base/SnapService.js"></script>
   <script src="static/app/base/SwiperService.js"></script>
   <script src="static/app/base/swiperClickDirective.js"></script>
   <script src="static/app/base/TagsService.js"></script>
@@ -77,12 +77,12 @@
   <script src="static/app/base/addItemDirective.js"></script>
   <script src="static/app/base/accordionTitleDirective.js"></script>
   <script src="static/app/base/accordionTitleLinkDirective.js"></script>
+  <script src="static/app/base/drawerDirective.js"></script>
+  <script src="static/app/base/drawerDragDirective.js"></script>
   <script src="static/app/base/itemCoreFieldsDirective.js"></script>
   <script src="static/app/base/listItemDirective.js"></script>
   <script src="static/app/base/registerElementToFeatureDirective.js"></script>
   <script src="static/app/base/scrollToDirective.js"></script>
-  <script src="static/app/base/snapDirective.js"></script>
-  <script src="static/app/base/snapDragDirective.js"></script>
   <script src="static/app/base/swiperContainerDirective.js"></script>
   <script src="static/app/base/swiperPreventDirective.js"></script>
   <script src="static/app/base/swiperSlideDirective.js"></script>
@@ -107,13 +107,15 @@
 
   <script src="static/app/archive/ArchiveController.js"></script>
 
-  <script src="static/app/main/featureContainerDirective.js"></script>
   <script src="static/app/main/HeaderController.js"></script>
   <script src="static/app/main/InboxController.js"></script>
   <script src="static/app/main/ItemsController.js"></script>
   <script src="static/app/main/ItemsService.js"></script>
   <script src="static/app/main/ExtendedItemService.js"></script>
+  <!-- REMOVE WHEN masterDirective ready! -->
+  <script src="static/app/main/featureContainerDirective.js"></script>
   <script src="static/app/main/MainController.js"></script>
+  <script src="static/app/main/masterDirective.js"></script>
   <script src="static/app/main/MenuController.js"></script>
   <script src="static/app/main/OmnibarController.js"></script>
   <script src="static/app/main/omnibarDirective.js"></script>
