--- a/frontend/core/src/main/webapp/static/app/entry/entry.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entry.html
@@ -46,7 +46,7 @@
               <span class="text-error" ng-message="minlength">password must be 7 characters or more</span>
             </div>
           </div>
-          <footer class="row container-navigation-slide">
+          <footer class="group-navigation row">
             <a href class="link-navigation-back" ng-click="swipeToHome()">back</a>
           </footer>
         </div>
@@ -100,7 +100,7 @@
             <span ng-if="sendFailed" class="text-error">you are not an extended mind user</span>
             <span ng-if="sendOffline" class="text-error">can't connect to server. are you online?</span>
           </div>
-          <footer class="container-navigation-slide">
+          <footer class="group-navigation row">
             <a href class="link-navigation-back" ng-click="swipeToMain()">back</a>
           </footer>
         </div>
