Editor:  * renamed OmnibarController to EditorController  * renamed omnibarInputDirective to editorTitlebarTextInputDirective  * added registration of opened and closed callbacks to DrawerService  * removed saveUnsavedListAndLinkToItem function from ListsController - save unsaved list in EditorController  * handle navigation and communication with DrawerService in MainController  * register drawer callbacks from EditorController in MainController  * initialize EditorController in editor.html instead of MainController  * removed openOmnibarDrawer and closeOmnibarDrawer functions from featureContainerDirective  * removed omnibar and footer ng-class from feature container element and added editor and menu ng-classes to main element  * replaced 'omnibar' with 'editor' in app  * added saveTask and resetTask to TasksController
 Reset task:
  * add 'description' to transient properties
  * addTransientProperties in TasksService gets array of tasks instead of single tasks as a parameter
  * detachTransientProperties in ExtendedItemService supports array of detachExtraPropertyFns

Refactoring.

--- a/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/staticPageHeader.html
@@ -9,7 +9,7 @@
     <a href class="heading" ng-click="switchFeature()" ng-bind="getCurrentHeading()"></a>
   </div>
   <div class="omni-button-container">
-    <a href class="omni-button" ng-click="openOmnibar('search')">
+    <a href class="omni-button" ng-click="openOmnibarDrawer()">
       <span class="icon-logo-only"></span>
     </a>
   </div>
