--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -20,12 +20,12 @@
   </div>
 </div-->
 
-<div id="main" ng-controller="MainController">
+<div id="main" ng-controller="MainController" ng-class="[isEditorVisible() ? 'editor-visible' : 'editor-hidden', isMenuVisible() ? 'menu-visible' : 'menu-hidden']">
   <div id="menu" ng-include="'static/app/main/menu.html'"></div>
   <div id="omnibar-drawer" class="omnibar-drawer" omnibar></div>
 
   <div id="feature-container-wrapper" snap>
-    <div id="feature-container" ng-class="[getOmnibarVisibilityClass(), getFooterVisibilityClass()]" feature-container editable-field-backdrop>
+    <div id="feature-container" ng-class="getFooterVisibilityClass()" feature-container editable-field-backdrop>
       <header class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
       <div ng-if="isFeatureActive('account')" ng-include="'static/app/account/account.html'" include-replace></div>
       <div ng-if="isFeatureActive('inbox')" ng-include="'static/app/main/inbox.html'" include-replace></div>
