--- a/frontend/core/src/main/webapp/static/app/tasks/snooze.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/snooze.html
@@ -1,37 +1,29 @@
-<div>
-  <div ng-if="!openSnooze.pikaday.isVisible" class="font-small">
-    <ul class="button-row">
-      <li ng-switch="isTaskDateTodayOrLess(task)" class="button-container left-of-three">
-        <button ng-switch-when="true" type="button" class="highlighted-button" ng-click="setDateTomorrow(task)">tomorrow</button>
-        <button ng-switch-when="false" type="button" class="highlighted-button" ng-click="setDateNextDay(task)">next day</button>
-        <button ng-switch-default type="button" class="highlighted-button" ng-click="setDateToday(task)">today</button>
-      </li>
-      <li class="button-container center-of-three">
-        <button ng-if="!taskHasDate(task)" type="button" class="highlighted-button" ng-click="setDateTomorrow(task)">tomorrow</button>
-        <button ng-if="taskHasDate(task)" type="button" class="highlighted-button" ng-click="setDateTwoDaysLater(task)">2 days later</button>
-      </li>
-      <li class="button-container right-of-three">
-        <button type="button" class="highlighted-button" ng-click="setDateWeekend(task)">weekend</button>
-      </li>
-    </ul>
-    <ul class="button-row">
-      <li class="button-container left-of-three">
-        <button type="button" class="highlighted-button" ng-click="setDateFirstDayOfNextWeek(task)">next week</button>
-      </li>
-      <li class="button-container center-of-three">
-        <button type="button" class="highlighted-button" ng-click="setDateFirstDayOfNextMonth(task)">next month</button>
-      </li>
-      <li class="button-container right-of-three item-actions">
-        <div class="form-group">
-          <a href class="highlighted-link" ng-click="openPikaDayAndScroll()">set date</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div ng-if="openSnooze.pikaday.isVisible" class="item-actions pikaday-animation">
-    <div class="pikaday-embedded" pikaday bound="false" default-date="{{task.transientProperties.date}}" set-default-date="true"></div>
-    <button ng-if="openSnooze.pikaday.hasDoneButton" type="button" class="wide-button normal-button" ng-click="pikadayEditDone()">
-      <span>done</span>
-    </button>
-  </div>
+<div class="font-small">
+  <ul class="button-row">
+    <li ng-switch="isDateTodayOrLess(initialDate)" class="button-container left-of-three">
+      <button ng-switch-when="true" type="button" class="highlighted-button" ng-click="setDateTomorrow()">tomorrow</button>
+      <button ng-switch-when="false" type="button" class="highlighted-button" ng-click="setDateNextDay(initialDate)">next day</button>
+      <button ng-switch-default type="button" class="highlighted-button" ng-click="setDateToday()">today</button>
+    </li>
+    <li class="button-container center-of-three">
+      <button ng-if="!initialDate" type="button" class="highlighted-button" ng-click="setDateTomorrow(initialDate)">tomorrow</button>
+      <button ng-if="initialDate" type="button" class="highlighted-button" ng-click="setDateTwoDaysLater(initialDate)">2 days later</button>
+    </li>
+    <li class="button-container right-of-three">
+      <button type="button" class="highlighted-button" ng-click="setDateWeekend(initialDate)">weekend</button>
+    </li>
+  </ul>
+  <ul class="button-row">
+    <li class="button-container left-of-three">
+      <button type="button" class="highlighted-button" ng-click="setDateFirstDayOfNextWeek(initialDate)">next week</button>
+    </li>
+    <li class="button-container center-of-three">
+      <button type="button" class="highlighted-button" ng-click="setDateFirstDayOfNextMonth(initialDate)">next month</button>
+    </li>
+    <li class="button-container right-of-three item-actions">
+      <div class="form-group">
+        <a href class="highlighted-link" ng-click="closeAndOpen()">choose date</a>
+      </div>
+    </li>
+  </ul>
 </div>
