Removed omnibarDirective and replaced it with include-replace.

--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -1,6 +1,6 @@
-<div class="omnibar-container swiper-no-swiping" ng-controller="EditorController" data-snap-ignore="true">
+<div id="omnibar-drawer" class="container-editor" ng-controller="EditorController" data-snap-ignore="true">
 
-  <div ng-if="isEditorVisible">
+  <div ng-if="isEditorVisible" class="omnibar-container">
 
     <header class="container-titlebar">
 
