--- a/frontend/core/src/main/webapp/static/app/main/main.html
+++ b/frontend/core/src/main/webapp/static/app/main/main.html
@@ -22,8 +22,7 @@
 
 <div id="main" ng-controller="MainController" ng-class="[isEditorVisible() ? 'editor-visible' : 'editor-hidden', isMenuVisible() ? 'menu-visible' : 'menu-hidden']">
   <div id="menu" ng-include="'static/app/main/menu.html'"></div>
-  <div id="omnibar-drawer" class="omnibar-drawer" omnibar></div>
-
+  <div ng-include="'static/app/main/editor.html'" include-replace></div>
   <div id="feature-container-wrapper" snap>
     <div id="feature-container" ng-class="getFooterVisibilityClass()" feature-container editable-field-backdrop>
       <header class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
